# website

./: .gitignore  .pre-commit-config.yaml  README.md  astro.config.mjs  eslint.config.mjs  keystatic.config.tsx  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  starwind.config.json  tsconfig.json
.github/workflows/: build.yaml  deploy.yaml
public/favicons/: site.webmanifest
scripts/: config-i18n.js  remove-keystatic.js
scripts/i18n/: folder-operations.js  index.js  prompts.js  types.js
scripts/i18n/config-updaters/: astro-config.js  keystatic-config.js  site-settings.js  translation-data.js
scripts/i18n/utils/: collect-files.js  copy-folder.js  file-utils.js  logging.js  remove-href-translations.js  remove-text-translations.js  replace-in-files.js
scripts/sermonaudio/: pyproject.toml  sermonaudio_fetch.py  sermonaudio_models.py
scripts/utils/: detect-package-manager.js
src/: content.config.ts
src/components/Accordion/: Accordion.astro
src/components/Admonition/: Admonition.astro
src/config/: siteSettings.json.ts  translationData.json.ts
src/js/: ministryUtils.ts  sermonUtils.ts
src/layouts/: BaseHead.astro  BaseLayout.astro  BlogLayoutCenter.astro  BlogLayoutSidebars.astro  MinistryLayoutCenter.astro
src/pages/: 404.astro  [...page].astro  about.astro  beliefs.astro  contact.astro  give.astro  index.astro  leadership-staff.astro  overview.astro  password-reset.astro  rss.xml.ts  sermons.astro  signup.astro  thanks.astro
src/styles/: buttons.css  fonts.css  global.css  markdown-content.css  starwind.css  tailwind-theme.css
(+732 files in other folders)
